<resources>
    <!--    Isi Dari UI     -->
    <string name="app_name">Lapalu!</string>
    <string name="welcome_title1">Lapor Pak Lurah!</string>
    <string name="welcome_title2">Ketahui Desa Kita</string>
    <string name="welcome_title3">Ambil Tempatmu</string>
    <string name="welcome_text1">Laporkan kejadian ganjil yang ada disekitar anda. Serta dapat memberikan kritik dan saran demi kemajuan desa kita.</string>
    <string name="welcome_text2">Dapatkan informasi desa kita secara berkala berita maupun penumuman yang terbaru dan akurat.</string>
    <string name="welcome_text3">Bergabung bersama kita, laporkan kejadian di sekitarmu, dapatkan informasi akurat terbaru. Mari majukan desa!</string>
    <string name="btn_next">Next</string>
    <string name="brn_start">Start</string>
    <string name="login_title">Welcome Lapalu App</string>

    <string name="enter_last_name">Last Name</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="have_account">Already have account?</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="enter_verif_password">Verification password</string>
    <string name="signup_title">Create Account</string>
    <string name="success_create_acc">Congratulation!</string>
    <string name="desc_success_create">Your account\'s successfully registered. Welcome to Lapalu App!</string>
    <string name="desc_forgot_password_1">Enter your registered email below to receive password reset instructions</string>
    <string name="text_forgot_password_1">Forgot Password?</string>
    <string name="btn_send">Send</string>
    <string name="text_forgot_password_2">Check Your Email</string>
    <string name="desc_forgot_password_2">Please check your inbox and click in the received link to received code</string>
    <string name="enter_code">Enter 5-digits code</string>
    <string name="dont_received_code">Don\'t received the code?</string>
    <string name="resend">Resend</string>
    <string name="btn_confirm">confirm</string>
    <string name="text_forgot_password_3">Reset Password</string>
    <string name="desc_forgot_password_3">Enter the new password, then your password will be change!</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="remember_pass">Remember your password?</string>
    <string name="login_here">Login Here</string>
    <string name="reset_here">Reset Here</string>
    <string name="btn_set_pass">Set Password</string>
    <string name="desc_success_forgot">Your password has been reset successfully.</string>
    <!--   Isi dari Validation Toast    -->
    <string name="first_name_empty">Fist name tidak boleh kosong</string>
    <string name="last_name_empty">Last name tidak boleh kosong</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="email_not_valid">Gunakan format email</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="form_empty">Inputan tidak boleh kosong</string>
    <string name="code_empty">Code verifikasi tidak boleh kosong</string>
    <string name="code_max_length">Code tidak boleh kurang dari 5-digit</string>
    <string name="password_verif_empty">Password verifikasi tidak bolek kosong</string>
    <string name="password_not_match">Password tidak sama</string>
    <string name="password_max">Password harus lebih dari 8 karakter</string>
    <string name="title_activity_beranda">BerandaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_there">Hello there!</string>
</resources>