<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimaryDark"
        android:lineHeight="54dp" />

    <EditText
        android:id="@+id/edFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/input_text"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/edLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/input_text"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_last_name"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edFirstName" />


    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/input_text"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edLastName" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/verifPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Enter again to verification your password"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/gray1"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="9dp" />

    <EditText
        android:id="@+id/edVerifPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/input_text"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:hint="@string/enter_verif_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edVerifPassword"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/btn_sign_up"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:onClick="clickSignUp" />


    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/gray1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/login_here"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/colorDanger"
            android:onClick="clickLogin"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>