<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword_3">

    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password_3"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="36sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/colorPrimaryDark"
        android:lineHeight="54dp" />

    <TextView
        android:id="@+id/descriptions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:textAlignment="textStart"
        android:text="@string/desc_forgot_password_3"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColor="@color/gray1"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Password"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/descriptions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/verifPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Verifikasi Password"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/edVerifPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifPassword"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_verif_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSetPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edVerifPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/btn_set_pass"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:onClick="clickToSet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetPass"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_pass"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/gray1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/login_here"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:onClick="clickGetStarted"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>