<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome_1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_bg1_welcome"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-55dp"
        tools:ignore="VectorDrawableCompat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginLeft="25dp"
        android:text="@string/welcome_title1"
        android:textSize="36sp"
        android:textColor="@color/colorPrimaryDark"
        android:lineHeight="54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/laporkan_ke"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_text1"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textColor="@color/gray1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome" />

    <Button
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_primary_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/btn_next"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="clickGetStarted"/>

</androidx.constraintlayout.widget.ConstraintLayout>